chabadhouse.css
/* ... */
.testimonials .owl-carousel .item .readMore,
.testimonials .owl-carousel .item .readMore:hover { text-decoration: none; }
.testimonials .owl-carousel .item .readMore:hover,
.testimonials .owl-carousel .item .readMore:focus { background: #1a3c37; }

.testimonials .synopsis {
    font-family: var(--heading-font-family), serif;
    color: var(--e-global-color-primary) !important;
    font-style: italic;
    font-weight: 600;
    font-size: 20px !important;
    font-size: 40px !important;
    font-weight: 500;
    font-style: italic;
    line-height: 1.3em !important;
    letter-spacing: -0.3px;
}

.testimonials .synopsis:before {
    content: url(https://clickcosupport.github.io/chabadhouse/quote.png);
    left: 0;
    position: absolute;
    top: -13px;
    margin-top: 13px;
    margin-left: 85px;
    z-index: -1;
}

.testimonials .title {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}
.testimonials .title span {
   color: #6a6666;
   font-size: 16px;
}
.testimonial-person {
    display: flex;
    gap: 11px;
    align-items: center;
}
.owl-carousel .owl-item img {
       width: 56px !important;
    border-radius: 50%;
     border: 3px solid #FEFDFC !important;
    outline: 1px solid var(--e-global-color-secondary);
}
/* connect */

/*form overlap */
div#content {
    z-index: 2;
    position: relative;
}
.subscribe label{
    display: none;
}
.hp_subscribe .wrapper #formContainer fieldset input#Email {
    width: 100%;
}
.hp_subscribe .wrapper #formContainer fieldset input {
  width: 100%;
      background: #FCFAF7;
    border: 1px solid #f4eee2;
    border-radius: 7px;
}
.hp_subscribe .wrapper #formContainer fieldset input::placeholder {
    color: #667085;
}
.hp_subscribe form {
   display: flex;
    justify-content: center;
    align-items: stretch;
}
.hp_subscribe fieldset{
      display: flex;
    flex-direction: column;
    gap: 6px;
    width: 100%;
    margin-top: 23px;
        max-width: 300px;
}
.hp_subscribe h5 {
    font-size: 35px !important;
}
.hp_subscribe {
    width: 46%;
    border-radius: 14px;
}
.connect {
    width: 52%;
    padding-top: 65px;
}

.connect .widget_header {
    display: none;
}

.connect .title {
    color: var(--e-global-color-primary);
    font-family: var(--heading-font-family), serif;
    line-height: 110%;
    text-align: left;
    margin-bottom: 10px;
}

.connect-wrapper {
   background: #f4eee2 !important;
   padding-bottom: 0 !important;
    
        padding-top: 80px !important;
}
.connect-section {
   gap: 30px;
    justify-content: space-between;
        display: flex;
        padding-top:30px;
        
}
.hp-row.hp_subscribe {
    background: #f9f6f0;
    position: relative;
    z-index: 1;
 padding: 70px 30px 76px 30px;
    margin-bottom: -53px;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* photos */
.photos {
        padding-bottom: 22px;
            padding-top: 180px;
    background: transparent;
        z-index: 1;
    position: relative;
}
.photos h5 {
  margin-bottom: 25px !important;
    color: #f4eee2 !important;
}
[class^=widget-].latest_photos a.readMore {
    
    display: none;
}
 #footer {
    padding-top: 143px;
    background: var(--e-global-color-primary) !important;
    position: relative;
}
 #footer::before {
    content: '';
    position: absolute;
    inset: 0;
    background: url('https://clickcosupport.github.io/chabadhouse/footer-background.webp') no-repeat center center / cover;
    opacity: 0.03;
    pointer-events: none;
}
.home #footer::after {
    content: '';
    position: absolute;
    inset: 0;
    background: linear-gradient(180deg, transparent 50%, #094C55 91%);
    opacity: 0.98;
    pointer-events: none;
    z-index: 0;
}
#footer .g960, #footer .footer_text {
    position: relative;
    z-index: 1;
}

.latest_photos .widget_content>ul {
      display: flex;
    align-items: stretch;
}


.latest_photos .widget_content>ul li, .latest_photos .widget_content>ul li:first-child {
       height: 220px;
    width: 25%;
}


/* footer */

@media (min-width: 767px) {
.footer_container, .cs-f-social-icons {
    width: 25%;
}
}
.footer_container br:first-of-type {
    display: none;
}
.footer_container .bottom_padding {
    padding-bottom: 0;
}
img.footer-logo {
    max-width: 233px;
}
.footer_inner_container {
    text-align:left;
}
.latest_photos .wrapper {
    padding: 0;
}
#footer .footer_text {
    
    padding-left: 0;
    padding-right: 0;
}
.footer_inner_container, .footer_inner_container a {
    color: #fff !important;
}
.footer_inner_container a:last-of-type {
  text-decoration: underline;
  text-underline-offset: 2px;
}
span.footer-title {
    color:var(--e-global-color-secondary) !important;
    text-transform: none !important;
    text-align: left;
      margin-bottom: 0 !important;
      font-size: 19px !important;
}
.powered img {
    display: none;
}
.footer3 {
    padding-bottom: 0 !important;
    display: flex;
    gap: 5px;
  
    align-items: baseline;
}
.footer-address {
 display:none;
    text-align: left;
}
#footer {
    background: var(--e-global-color-primary);
   
    padding-top: 0;
    padding-bottom: 0;
    margin-top: -1px;
}

#footer .g960 {
   align-items: center;
    float: none;
    display: flex;
    padding:0;
        padding-bottom: 30px;
    align-items: flex-end;
    justify-content: space-between;
    border-top: 1px solid #F4EEE233;
    padding-top: 10px;

}

.cs-f-social-icons a {
   color: #fff;
    height: 41px;
    width: 41px;
       margin: 2px;
    border: 1px solid var(--e-global-color-secondary);
}
.cs-f-social-icons {
   
    display: flex;
    justify-content: flex-end;
    gap: 4px;
}
#footer .footer_text .footer3, #footer .footer_text .footer3 b, .footer_inner_container {
    color: #f4eee2;
        font-size: 13px;
   font-family:var(--paragraph-font-family);
}
/* ... */

